--- a/pbl_manejo/MFA5F1 Ficha Estrutura da floresta/index.html
+++ b/pbl_manejo/MFA5F1 Ficha Estrutura da floresta/index.html
@@ -81,26 +81,30 @@
     <div class="reveal">
       <div class="slides"><section  data-markdown><script type="text/template"># Estrutura da florestas
 #ficha </script></section><section ><section data-markdown><script type="text/template">## Estrutura horizontal</script></section><section data-markdown><script type="text/template">Frequência: percentual de parcelas que contêm indivíduos de determinada espécie.
+<p style="line-height: 0" class="reset-paragraph"><img src="Attachment/frequencia.png" alt="" ></img></p>
+Em que:
+- Ui = número de parcelas com a presença da i-ésima espécie.
+- UT = número total de parcelas amostradas.</script></section><section data-markdown><script type="text/template">Densidade: número de indivíduos por hectare.
+<p style="line-height: 0" class="reset-paragraph"><img src="Attachment/densidade.png" alt="" ></img></p>
+Em que:
+- ni = número de indivíduos da i-ésima espécie.
+- A = área total amostrada em hectares.</script></section><section data-markdown><script type="text/template">Dominância: expressa o grau de ocupação da área da floresta pela área basal da espécie.
+<p style="line-height: 0" class="reset-paragraph"><img src="Attachment/dominancia.png" alt="" ></img></p>
+Em que:
+- Gi= área basal da i-ésima espécie em m².
+- A = área total amostrada em hectares.</script></section></section><section  data-markdown><script type="text/template">Latex:
 `$$FA_i = \frac{U_i}{U_T} * 100$$`
-Em que:
-- `$U_i$` = número de parcelas com a presença da i-ésima espécie.
-- `$UT$` = número total de parcelas amostradas.</script></section><section data-markdown><script type="text/template">Densidade: número de indivíduos por hectare.
 `$$DA_i = \frac{n_i}{A}$$`
-Em que:
-- `$n_i$` = número de indivíduos da i-ésima espécie.
-- `$A$` = área total amostrada em hectares.</script></section><section data-markdown><script type="text/template">Dominância: expressa o grau de ocupação da área da floresta pela área basal da espécie.
-`$$DoA_i = \frac{G_i}{A}$$`
-Em que:
-- `$G_i$` = área basal da i-ésima espécie em `$m^2$`.
-- `$A$` = área total amostrada em hectares.</script></section></section><section ><section data-markdown><script type="text/template">## Estrutura paramétrica
+`$$DoA_i = \frac{G_i}{A}$$`</script></section><section ><section data-markdown><script type="text/template">## Estrutura paramétrica
 A estrutura paramétrica é analisada com base nas estimativas dos parâmetros que expressam densidades e estoques da floresta (atributos da floresta).</script></section><section data-markdown><script type="text/template">O volume não é uma variável medida diretamente no inventário. Com base no diâmetro (e altura) estima-se o volume de cada uma das árvores amostradas. A principal técnica utilizada para o estimar volume de árvores individuais são as equações volumétricas.</script></section><section data-markdown><script type="text/template">Por muito tempo, a quantificação volumétrica das espécies amazônicas foi efetuada com base no fator de forma de 0,7. Esse valor foi empregado de forma generalizada para diferentes espécies, sítios, formações e tipologias florestais, ocasionando sérios erros nas estimativas volumétricas.</script></section><section data-markdown><script type="text/template">No início da década de 1980, aflorou a necessidade pelo aprimoramento das técnicas para estimar o volume de árvores, visando à obtenção de estimativas mais confiáveis. Desde então, diversos trabalhos foram realizados na Amazônia com esse objetivo.</script></section><section data-markdown><script type="text/template">A estrutura diamétrica é mais utilizada que o volume para caracterizar tipologias vegetais, estágios sucessionais, estados de conservação, regimes de manejo, processos de dinâmica de crescimento e produção, grupos ecológicos e como referência para o manejo.</script></section><section data-markdown><script type="text/template">O diâmetro acabou se consagrando como uma variável importante na descrição da estrutura florestal, como também na comercialização da madeira. Assim, conhecer a distribuição diamétrica é fundamental!</script></section><section data-markdown><script type="text/template">Tipos de distribuições:
 - Unimodal
 - Multimodal
 - Normal
 - J-invertido
 - Contínua</script></section><section data-markdown><script type="text/template">Um histograma, também conhecido como distribuição de frequências ou diagrama das frequências, é a representação gráfica, em colunas (retângulos), de um conjunto de dados previamente tabulado e dividido em classes uniformes.</script></section><section data-markdown><script type="text/template">O método de Sturges pode ser utilizado para obtenção do n° de classes:
-`$1+3,333*log(N)$` 
-Sendo N o número de indivíduos.</script></section></section><section ><section data-markdown><script type="text/template">## Estrutura espacial
+<p style="line-height: 0" class="reset-paragraph"><img src="Attachment/numero classes.png" alt="" ></img></p>
+Sendo N o número de indivíduos.</script></section></section><section  data-markdown><script type="text/template">Latex:
+`$$1+3,333*log(N)$$`</script></section><section ><section data-markdown><script type="text/template">## Estrutura espacial
 Padrão pode ser definido como algo que se repete com certa previsibilidade. Nem sempre os padrões são evidentes. Por isto criam-se critérios para definir matematicamente os padrões.</script></section><section data-markdown><script type="text/template">Padrão espacial pode ser derivado da definição acima como algo que se repete com certa previsibilidade no espaço.</script></section><section data-markdown><script type="text/template">O que pode influenciar o padrão espacial de uma espécie?
 - Fatores abióticos
 - Dispersão da espécie
@@ -111,30 +115,34 @@ Padrão pode ser definido como algo que se repete com certa previsibilidade. Nem
 - Regular
 - Agregada
 - Aleatória</script></section><section data-markdown><script type="text/template">Os padrões espaciais sofrem forte influência da escala da análise. Para estudar o padrão espacial (agregação) de uma espécie tem-se duas abordagens: conhecer o número de indivíduos da espécie de interesse em cada parcela (parcela); e conhecer o posicionamento de cada indivíduo da espécie de interesse na área de estudo (área).</script></section></section><section  data-markdown><script type="text/template">### Variância em nível de parcela
-`$$S^2_i = \frac{\sum_{p=1}^P n^2_{ip} - (\frac{\sum_{p=1}^P n_{ip}}{P})^2}{P-1}$$`
+<p style="line-height: 0" class="reset-paragraph"><img src="Attachment/variancia parcelas.png" alt="" ></img></p>
 Em que:
 - P = número total de parcelas
-- `$n_{ip}$` = número de indivíduos da i-ésima espécie na p-ésima parcela.</script></section><section  data-markdown><script type="text/template">### Média em nível de parcela:
-`$$M_i = \frac{\sum_{p=1}^P n_{ip}}{P}$$`
+- nip = número de indivíduos da i-ésima espécie na p-ésima parcela.</script></section><section  data-markdown><script type="text/template">### Média em nível de parcela:
+<p style="line-height: 0" class="reset-paragraph"><img src="Attachment/media parcelas.png" alt="" ></img></p>
 Em que:
 - P = número total de parcelas
-- `$n_{ip}$` = número de indivíduos da i-ésima espécie na p-ésima parcela.</script></section><section  data-markdown><script type="text/template">### Índice de Payandeh
-`$$\frac{S^2_i}{M_i}$$`
+- nip = número de indivíduos da i-ésima espécie na p-ésima parcela.</script></section><section  data-markdown><script type="text/template">### Índice de Payandeh
+<p style="line-height: 0" class="reset-paragraph"><img src="Attachment/payandeh.png" alt="" ></img></p>
 Regra de decisão:
 - Se = 1, aleatoriamente distribuído.
 - Se < 1 (ou < M), regularmente distribuído.
 - Se > 1, padrão agregado.</script></section><section  data-markdown><script type="text/template">### Índice de Hazen
-`$$\frac{S^2_i}{M_i} (P-1)$$`
+<p style="line-height: 0" class="reset-paragraph"><img src="Attachment/hazen.png" alt="" ></img></p>
 Regra de decisão:
 - Se < que `$\chi$` para 75% com P-1 graus de liberdade, padrão não agrupado.
 - Se > que `$\chi$` para 99% com P-1 graus de liberdade, padrão agrupado.
 - Se entre os valores de `$\chi$`,  tendência ao agrupamento.</script></section><section  data-markdown><script type="text/template">### Índice de Morisita
-`$$\frac{\sum_{p=1}^P n_{ip}(n_{ip}-1)}{n_i(n_i - 1)} P$$`
+<p style="line-height: 0" class="reset-paragraph"><img src="Attachment/morisita.png" alt="" ></img></p>
 Regra de decisão:
 - Se < 1, padrão uniforme ou regular. 
 - Se > 1, padrão agrupado.
-- Se = 1, padrão aleatório.
-</script></section></div>
+- Se = 1, padrão aleatório.</script></section><section  data-markdown><script type="text/template">Latex:
+`$$S^2_i = \frac{\sum_{p=1}^P n^2_{ip} - (\frac{\sum_{p=1}^P n_{ip}}{P})^2}{P-1}$$`
+`$$M_i = \frac{\sum_{p=1}^P n_{ip}}{P}$$`</script></section><section  data-markdown><script type="text/template">Latex:
+`$$\frac{S^2_i}{M_i}$$`
+`$$\frac{S^2_i}{M_i} (P-1)$$`
+`$$\frac{\sum_{p=1}^P n_{ip}(n_{ip}-1)}{n_i(n_i - 1)} P$$`</script></section></div>
     </div>
 
     <script src="dist/reveal.js"></script>
